# ros2bot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-base  Dockerfile-dev  Dockerfile-ws  Dockerfile.v1  README.md
app/: start_app.sh
app/src/: ros2bot_main.py  ros2bot_wifi.py
app/src/templates/: index.html  init.html
config/: upstream.repos
drivers/master_driver/: setup.py
drivers/master_driver/rosbotmaster.egg-info/: SOURCES.txt
drivers/speach_driver/: README.md  setup.py
libraries/: README.md
libraries/master_board_pkg/: LICENSE  README.md
libraries/ros2bot_master_lib/: README.md  setup.py
libraries/ros2bot_speach_lib/: README.md  setup.py
libraries/speach_board_pkg/: setup.py
libs/: README.md
libs/ros2bot_master_lib/: setup.py
libs/ros2bot_speach_lib/: README.md
scripts/: docker_build.sh  docker_build_base.sh  docker_build_dev.sh  docker_build_ros.sh  docker_build_ws.sh  docker_push.sh  docker_run.sh  opencv_install.sh  opencv_install_deps.sh  python_version.sh  ros2bot_udev.sh  ros_entrypoint.sh
src/: ros2bot_camera.py  ros2bot_main.py  ros2bot_start.sh
src/master_driver_package/: package.xml  setup.cfg  setup.py
src/ros2bot_master/: package.xml  setup.cfg  setup.py
src/ros2bot_speach/: package.xml  setup.cfg  setup.py
src/ros2bot_startup_pkg/: CMakeLists.txt  README.md  package.xml
src/ros2bot_startup_pkg/scripts/: ros2bot_driver_node.py
src/ros2bot_startup_pkg/src/: ros2bot_base_node.cpp
src/speach_driver_package/: package.xml  setup.cfg  setup.py
test/: ros2bot_master_test.py
(+31 files in other folders)
